edit some dockerfile and add docker-compose file

--- a/Docker-files/Web/Dockerfile
+++ b/Docker-files/Web/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx
 LABEL "Description"="Nginx image"
 
 RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY nginvpoapp.conf /etc/nginx/conf.d/nginvpoapp.conf
+COPY nginvproapp.conf /etc/nginx/conf.d/nginvproapp.conf
